# django1

./: .gitignore  README.md  main.py  pyproject.toml
mysite/mysite/: authentication.py  settings.py  urls.py
mysite/polls/: models.py  urls.py  views.py
mysite/polls/migrations/: 0001_initial.py
mysite/polls/templates/polls/: detail.html  index.html  results.html
